--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
   .wrapper {
@@ -28,18 +29,18 @@ nav ul {
 
 nav ul li {
     padding: 10px 20px 10px 10px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .container {
     display: flex;
-  }
-  
-  .column {
+    position: static;
+}
+
+.column {
     padding: 20px;
   }
 
- img {
+img {
     width: 330px;
     height: 330px;
     background: black;
@@ -58,6 +59,13 @@ footer {
 }
 .column p {
     font-size: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
 }
-        
+h2, h3 {
+  font-weight: lighter;
+}
+h5 {
+  font-weight: lighter;
+  font-style: italic;
+  line-height: 2px;
+}
