--- a/style.css
+++ b/style.css
@@ -4,45 +4,56 @@
   }
 
   .wrapper {
-    width: 100%;
-    max-width: 900px;
-    margin: 0 auto;
-}
-
-nav {
-    background-color: #ebebeb;
-    padding: 180px 0;
-    position: absolute;
-    right: 100px;
-    text-align: right;
-}
-
-nav ul {
-    list-style-type: none;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    margin: 0;
-    font-size: 30px;
-    
-}
-
-nav ul li {
-    padding: 10px 20px 10px 10px;
-}
-
-.container {
-    display: flex;
-    position: static;
-}
-
-.column {
-    padding: 20px;
   }
 
+  nav {
+    background-color: #c17e9d;
+    padding: 10px;
+  }
+  
+  nav ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: flex-end;
+    margin: 0;
+  }
+  
+  nav ul li {
+    align-items: right;
+    padding: 0 0 0 20px;
+    font-size: 16px;
+    color: whitesmoke;
+  }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.column1 {
+  background-color: #ab677d82;
+  width: 100%;
+  
+}
+
+.column2 {
+  width: 100%;
+
+}
+.column1, .column2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  }
+
+
 img {
-    width: 330px;
-    height: 330px;
+    width: 150px;
+    height: 150px;
     background: black;
     border-radius: 160px;
     display: flex;
@@ -50,22 +61,45 @@ img {
   }
 
 footer {
-    background-color: #ebebeb;
-    text-align: center;
-    padding: 20px 0;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #c17e9d;
+  text-align: center;
+  padding: 15px 0;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  color: whitesmoke;
 }
 .column p {
     font-size: 20px;
     
 }
-h2, h3 {
-  font-weight: lighter;
+h2 {
+  margin-bottom: 3px;
 }
-h5 {
+h4 {
+  font-weight: lighter;
+  margin: 4px;
+}
+h6 {
   font-weight: lighter;
   font-style: italic;
-  line-height: 2px;
+  margin: 2px;
+  color:#707070
 }
+.listing {
+  font-style: italic;
+  margin-right: 20px;
+  margin-left: 5px;
+  color:#707070;
+}
+@media (min-width : 768px) {
+  nav ul li {
+  font-size: 16px;
+    }
+    .column1, .column2 {
+      height: 300px;
+    }
+  }
